# python-meanwhile

./: .cvsignore  ChangeLog  Makefile.am  TODO  configure.ac  meanwhile-python.spec.in
src/: .cvsignore  Makefile.am  meanwhile.py  py_channel.c  py_meanwhile.c  py_meanwhile.h  py_service.c  py_session.c  py_srvc_aware.c  py_srvc_conf.c  py_srvc_ft.c  py_srvc_im.c  py_srvc_resolve.c  py_srvc_store.c
test/: .cvsignore  client.py  test.py  test.sh.in
